deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: integration-hub
  labels:
    name: integration-hub
